[package]
name = "bevy_archive_reader"
version = "0.1.0"
edition = "2024"
authors = ["Piotr Siuszko"]
keywords = ["bevy", "assets", "archive"]
description = "Reading archives as source of assets in Bevy"
license = "MIT OR Apache-2.0"

[features]
default = ["bundler"]
bundler = ["dep:walkdir"]

[dependencies]
bevy_app = { version = "0.17.0" }
bevy_ecs = { version = "0.17.0" }
bevy_reflect = { version = "0.17.0" }
bevy_derive = { version = "0.17.0" }
bevy_asset = { version = "0.17.0" }
bevy_tasks = { version = "0.17.0" }
bevy_log = { version = "0.17.0" }
zip = {version = "7.0.0", default-features = false, features = ["aes-crypto", "xz"]}
xorio = "0.1.0"
crossbeam-channel = "0.5"
futures-lite = "2.0.1"
walkdir = {optional = true, version ="2"}

[target.'cfg(target_os = "android")'.dependencies]
bevy_android = { version = "0.17.0" }
bevy_winit = { version = "0.17.0" }
